--- a/index.html
+++ b/index.html
@@ -42,5 +42,7 @@
         <button id="restsrt-btn">Restart Quiz</button>
       </div>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
